[metadata]
name: kitsiso
version: 0.2.0
url: https://andreas19.github.io/kitsiso/
project_urls: Source code=https://github.com/andreas19/kitsiso/
author: Andreas Suhre
author_email: andreas19@posteo.eu
classifiers:
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Desktop Environment
    Topic :: Software Development :: Libraries
license: BSD-3-Clause
license_file: LICENSE.txt
description: Library for sending desktop notifications.
long_description: file:README.md,CHANGELOG.md
long_description_content_type: text/markdown
keywords: desktop notifications

[options]
install_requires:
    dcar>=0.1.0
python_requires: >=3.7
packages: kitsiso
package_dir: =src
